[gd_scene load_steps=2 format=3 uid="uid://dw4qs5rh23644"]

[ext_resource type="Script" path="res://src/main_screen/main.gd" id="1_8ejca"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8ejca")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.275
anchor_top = 0.383
anchor_right = 0.723
anchor_bottom = 0.5
offset_left = 44.5
offset_top = 13.3
offset_right = -44.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
metadata/_edit_group_ = true

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 26
text = "New Budget"

[node name="Button2" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 26
text = "Load Last Budget"

[node name="NewBudgetPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.144
anchor_top = 0.071
anchor_right = 0.868
anchor_bottom = 0.213
offset_top = 0.0999985
offset_bottom = 0.299988
grow_horizontal = 2

[node name="Close" type="Button" parent="NewBudgetPanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -8.0
offset_bottom = 8.0
grow_horizontal = 0
text = "close"

[node name="Confirm" type="Button" parent="NewBudgetPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -24.0
offset_top = -31.0
offset_right = 24.0
grow_horizontal = 2
grow_vertical = 0
text = "confirm"

[node name="SpinBox" type="SpinBox" parent="NewBudgetPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.282
anchor_bottom = 0.367
offset_right = -0.0839996
offset_bottom = 0.0239983
max_value = 999999.0

[node name="ErrorLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.358
anchor_top = 0.551
anchor_right = 0.644
anchor_bottom = 0.613
offset_top = 0.100006
offset_right = -3.05176e-05
offset_bottom = 0.299988
grow_horizontal = 2
grow_vertical = 2

[connection signal="button_up" from="VBoxContainer/Button" to="." method="_on_new_budget_button_up"]
[connection signal="button_up" from="NewBudgetPanel/Close" to="." method="_on_close_new_budget_button_up"]
[connection signal="button_up" from="NewBudgetPanel/Confirm" to="." method="_on_confirm_new_budget_button_up"]
